fixed stuck in edit mode problems

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -249,13 +249,17 @@ a .link-icon a.link-icon, a:hover .link-icon, a.link-icon:hover, a:visited .link
 	width: 100%;
 
 	background-color: #f5f5f5;
-	padding: 4px 4px;
 	margin-bottom: 14px;
 	margin-top: 10px;
 
 	a, a:hover, a:visited, input {
 		line-height: 2em;
 		height: 2em;
+	}
+
+
+	a {
+		padding: 8px 8px;
 	}
 
 	.glyphicon {
